--- a/app/views/devise/registrations/_pro_form.html.erb
+++ b/app/views/devise/registrations/_pro_form.html.erb
@@ -19,7 +19,7 @@
     <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %>
   </div>
   
-  <div ckass="form-group">
+  <div class="form-group">
     <%= label_tag :card_number, "Credit Card Number" %>
     <%= text_field_tag :card_number, nil, name: nil, class: "form-control" %>
   </div>
