--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,12 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-3 text-center">
-      <%= image_tag @user.profile.avatar.url, class: 'avatar-show-img' %>
+    <div class="col-sm-3 text-center">
+      <%= image_tag @user.profile.avatar.url, class: 'avatar-show-img' %></br></br></br>
+      <% if @user.id != current_user.id %>
+         <%= link_to 'Message user', conversations_path(sender_id: current_user.id, recipient_id: @user.id), method: 'post', class: 'btn btn-primary'%>
+      <% end %>
     </div>
-    <div class="col-md-6">
+    <div class="col-sm-6">
     <h1><%= @user.profile.first_name %> <%= @user.profile.last_name %></h1>
     <h3><span class='job-title-icon'><%= job_title_icon %></span><%= @user.profile.job_title %></h3>
     <div class="well profile-block profile-description">
